Fixed some alignment with footer.

--- a/style.css
+++ b/style.css
@@ -149,5 +149,5 @@ button {
 }
 
 footer {
-	margin-top: 100px;
+	margin-top: 50px;
 }
